background images fixed3

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
         position: absolute;
         height: 100%;
         width: 100%;
-        background-image: url(https://github.com/ibraKH/SCH/blob/main/aa.jpg);
+        background-image: url(aa.jpg);
         background-size: cover;
         background-repeat: no-repeat;
     }
@@ -121,7 +121,7 @@ body {
         position: absolute;
         height: 100%;
         width: 100%;
-        background-image: url(https://github.com/ibraKH/SCH/blob/main/secend.jpg);
+        background-image: url(secend.jpg);
         background-size: cover;
         background-repeat: no-repeat;
     }
